# pixel-cat-calendar

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: .env  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/calendar/: apple.rs  google.rs  mod.rs  outlook.rs
src/components/: CalendarWidget.tsx  Cat.tsx  SpeechBubble.tsx
