[package]
name = "pixel-cat-calendar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pixel_cat_calendar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["form", "json", "rustls"] }
eventkit-rs = "0.5.5"
tauri-plugin-oauth = "2.0.0"
google-calendar3 = "7.0.0"
chrono = "0.4.44"
tokio = { version = "1.51.1", features = ["full"] }
dotenvy = "0.15.7"
webbrowser = "1.2.0"
once_cell = "1.21.4"
futures-util = "0.3.32"
urlencoding = "2.1.3"
url = "2.5.8"
cocoa = "0.26.1"
objc = "0.2.7"
core-graphics = "0.25.0"

